--- a/Enfoca/Features/Home/Home.storyboard
+++ b/Enfoca/Features/Home/Home.storyboard
@@ -46,10 +46,56 @@
                                         </segments>
                                         <color key="tintColor" red="0.99989169836044312" green="1" blue="0.99988096952438354" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </segmentedControl>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zZT-IV-PFH">
+                                        <rect key="frame" x="0.0" y="275" width="375" height="100"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="KtW-AO-v4q"/>
+                                        </constraints>
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="qGQ-Lj-8cB">
+                                            <size key="itemSize" width="100" height="100"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="TagCollectionViewCellId" reuseIdentifier="TagCollectionViewCellId" id="ysF-Kk-S3b" customClass="TagCollectionViewCell" customModule="Enfoca" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="One word" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="umQ-8k-MRJ">
+                                                            <rect key="frame" x="0.0" y="0.5" width="100" height="100"/>
+                                                            <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="20"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </view>
+                                                <constraints>
+                                                    <constraint firstItem="umQ-8k-MRJ" firstAttribute="width" secondItem="ysF-Kk-S3b" secondAttribute="width" id="V5l-T2-QN9"/>
+                                                    <constraint firstItem="umQ-8k-MRJ" firstAttribute="centerX" secondItem="ysF-Kk-S3b" secondAttribute="centerX" id="afn-4s-2do"/>
+                                                    <constraint firstItem="umQ-8k-MRJ" firstAttribute="height" secondItem="ysF-Kk-S3b" secondAttribute="height" id="lXe-sA-A92"/>
+                                                    <constraint firstItem="umQ-8k-MRJ" firstAttribute="centerY" secondItem="ysF-Kk-S3b" secondAttribute="centerY" id="sCB-FP-rqg"/>
+                                                </constraints>
+                                                <connections>
+                                                    <outlet property="titleLabel" destination="umQ-8k-MRJ" id="X6A-wg-WsP"/>
+                                                </connections>
+                                            </collectionViewCell>
+                                        </cells>
+                                        <connections>
+                                            <outlet property="dataSource" destination="AI2-XD-8xV" id="uZQ-PU-dSY"/>
+                                        </connections>
+                                    </collectionView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.32549019610000002" green="0.34509803919999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstItem="zZT-IV-PFH" firstAttribute="leading" secondItem="3KL-V9-SAs" secondAttribute="leading" id="697-aD-6Dp"/>
+                                    <constraint firstAttribute="trailing" secondItem="zZT-IV-PFH" secondAttribute="trailing" id="G1P-5v-R2S"/>
                                     <constraint firstAttribute="height" constant="383" id="If7-LZ-hbA"/>
+                                    <constraint firstAttribute="bottom" secondItem="zZT-IV-PFH" secondAttribute="bottom" constant="8" id="sus-jX-sRy"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¡Enfoca!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mgK-Ja-kbt">
@@ -74,12 +120,14 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="browseByTagCollectionView" destination="zZT-IV-PFH" id="2Zh-tp-aEn"/>
                         <outlet property="languageSegmentedControl" destination="dwd-qq-5mt" id="uND-xA-cZV"/>
                         <outlet property="oldTitleLabel" destination="c26-yw-H9c" id="bwm-59-RiD"/>
                         <outlet property="titleLabel" destination="mgK-Ja-kbt" id="OOw-wf-stW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="frR-PW-uCx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="AI2-XD-8xV" customClass="TagCollectionViewDataSource" customModule="Enfoca" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="-8.8000000000000007" y="51.724137931034484"/>
         </scene>
