--- a/Enfoca/Features/Home/Home.storyboard
+++ b/Enfoca/Features/Home/Home.storyboard
@@ -47,8 +47,8 @@
                                         <color key="tintColor" red="0.99989169836044312" green="1" blue="0.99988096952438354" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </segmentedControl>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zZT-IV-PFH">
-                                        <rect key="frame" x="0.0" y="275" width="375" height="100"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <rect key="frame" x="0.0" y="275" width="383" height="100"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="100" id="KtW-AO-v4q"/>
                                         </constraints>
@@ -56,11 +56,11 @@
                                             <size key="itemSize" width="100" height="100"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                            <inset key="sectionInset" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="TagCollectionViewCellId" reuseIdentifier="TagCollectionViewCellId" id="ysF-Kk-S3b" customClass="TagCollectionViewCell" customModule="Enfoca" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                <rect key="frame" x="8" y="0.0" width="100" height="100"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                                     <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
@@ -74,6 +74,7 @@
                                                         </label>
                                                     </subviews>
                                                 </view>
+                                                <color key="backgroundColor" red="0.63860702514648438" green="0.80702608823776245" blue="0.6457703709602356" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstItem="umQ-8k-MRJ" firstAttribute="width" secondItem="ysF-Kk-S3b" secondAttribute="width" id="V5l-T2-QN9"/>
                                                     <constraint firstItem="umQ-8k-MRJ" firstAttribute="centerX" secondItem="ysF-Kk-S3b" secondAttribute="centerX" id="afn-4s-2do"/>
@@ -93,7 +94,7 @@
                                 <color key="backgroundColor" red="0.32549019610000002" green="0.34509803919999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="zZT-IV-PFH" firstAttribute="leading" secondItem="3KL-V9-SAs" secondAttribute="leading" id="697-aD-6Dp"/>
-                                    <constraint firstAttribute="trailing" secondItem="zZT-IV-PFH" secondAttribute="trailing" id="G1P-5v-R2S"/>
+                                    <constraint firstAttribute="trailing" secondItem="zZT-IV-PFH" secondAttribute="trailingMargin" id="G1P-5v-R2S"/>
                                     <constraint firstAttribute="height" constant="383" id="If7-LZ-hbA"/>
                                     <constraint firstAttribute="bottom" secondItem="zZT-IV-PFH" secondAttribute="bottom" constant="8" id="sus-jX-sRy"/>
                                 </constraints>
